# python-template

./: .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  init.sh  mypy.ini  pyproject.toml  requirements.txt  run_mypy.sh
sample/: main.py
tests/: test_main.py
