[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["marciorasf <marciorasf@gmail.com>"]

[tool.poetry.dependencies]
pydantic = "^1.9.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
dlint = "^0.12.0"
flake8 = "^4.0.1"
flake8-absolute-import = "^1.0.0"
flake8-annotations-complexity = "^0.0.6"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-eradicate = "^1.2.0"
flake8-expression-complexity = "^0.0.9"
flake8-functions = "^0.0.6"
flake8-isort = "^4.1.1"
flake8-length = "^0.3.0"
flake8-simplify = "^0.15.1"
flake8-variables-names = "^0.0.4"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9.4"
vulture = "^2.3"
bandit = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=sample",
  "--cov-report=term"
]
